--- a/main.css
+++ b/main.css
@@ -166,7 +166,7 @@ nav ul li:hover{
 }
 
 .shutter{
-  background-color:rgb(0,162,232);
+  background-color:rgba(32,44,170,0.8);//rgb(0,162,232);
 }
 
 
@@ -257,6 +257,7 @@ article #loginAdmin{
   transform-style:preserve-3d;
 }
 
+
 .ro1{
   animation-name: rotateLoginAdmin;
   animation-duration: 0.6s;
@@ -340,6 +341,19 @@ article #loginAdmin{
   background: rgb(0,12,138);
 }
 
+#login h1 {
+  color:white;
+  border-radius: 6px;
+  height:40px;
+  width:300px;
+  margin-top:30px;
+  margin-left:50px;
+  display:block;
+  text-align:center;
+  font-size:22px;
+  margin-bottom:-40px;
+}
+
 article #login input{
   border-radius: 6px;
   height:40px;
@@ -350,6 +364,7 @@ article #login input{
   text-align:center;
   font-size:22px;
 }
+
 
 #submit{
   background:rgb(132,144,170);
@@ -406,6 +421,18 @@ article #login input{
   background: rgb(0,12,138);
 }
 
+#admin h1 {
+  color:white;
+  border-radius: 6px;
+  height:40px;
+  width:300px;
+  margin-top:30px;
+  margin-left:50px;
+  display:block;
+  text-align:center;
+  font-size:22px;
+  margin-bottom:-40px;
+}
 
 article #admin input{
   border-radius: 6px;
