--- a/user/fetch.css
+++ b/user/fetch.css
@@ -146,3 +146,10 @@
   padding-top:15px;
   cursor:pointer;
 }
+
+.StudentSelector{
+	height:40px;
+	width:40px;
+	margin-top:12px;
+	margin-left:6px;
+}
