--- a/user/fetch.css
+++ b/user/fetch.css
@@ -56,6 +56,20 @@
   margin-left:5px;
   font-size:14px;
   text-align: center;
+  position:absolute;
+  right:85px;
+}
+
+#articleSection1 #articleSection1Search #download_button{
+  height:40px;
+  width:80px;
+  margin-top:10px;
+  border-radius:10px;
+  margin-left:5px;
+  font-size:14px;
+  text-align: center;
+  position:absolute;
+  right:5px;
 }
 
 
@@ -152,4 +166,5 @@
 	width:40px;
 	margin-top:12px;
 	margin-left:6px;
+	cursor:pointer;
 }
